[package]
name = "waithook"
version = "0.1.0"
authors = ["Pavel Evstigneev <pavel.evst@gmail.com>"]

[dependencies]
env_logger = "*"
hyper = "^0.10.6"
rustc-serialize = "0.3.22"
url = "1.7.0"
time = "0.1.39"
flate2 = "1.0.1"
#flate2 = { version = "0.2", features = ["zlib"], default-features = false }
sentry-rs = "2"

[dependencies.websocket]
git = "https://github.com/paxa/rust-websocket.git"
features = ["sync"]

#websocket = { path = "../rust-websocket" }
