[package]
name = "waithook"
version = "0.1.0"
authors = ["Pavel Evstigneev <pavel.evst@gmail.com>"]

[dependencies]
env_logger = "*"
hyper = "=0.10.16"
hyper-native-tls = "0.3.0"
rustc-serialize = "0.3.25"
url = "1.7.2"
time = "0.1.42"
flate2 = "1.0.7"
#flate2 = { version = "0.2", features = ["zlib"], default-features = false }
serde = "1.0.94"
serde_json = "1.0.40"


[dependencies.sentry]
version = "0.34.0"
features = ["panic", "backtrace"]

[dependencies.postgres]
version = "0.19.9"
features = ["with-serde_json-1"]

[dependencies.websocket]
git = "https://github.com/paxa/rust-websocket.git"
features = ["sync"]

#websocket = { path = "../rust-websocket" }
